sponsor overlap logo fix

--- a/hashtech/styles/Navbar.css
+++ b/hashtech/styles/Navbar.css
@@ -263,7 +263,7 @@ hr {
   /* Adjust margins as needed */
   padding: 10px;
   /* Adjust padding as needed */
-  z-index: 1;
+  z-index: 2;
   /* Set a high z-index to ensure it appears above other elements */
 }
 
